--- a/.dockerignore
+++ b/.dockerignore
@@ -6,6 +6,7 @@ src/storage/framework/cache/*
 src/storage/framework/sessions/*
 src/storage/framework/views/*
 src/bootstrap/cache/*
+src/public/storage
 src/.env
 src/.env.*
 
